--- a/index.html
+++ b/index.html
@@ -1,53 +1,145 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gigeo app</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gigeo app</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
+
 <body>
-    <nav class="navbar navbar-light bg-light navbar-expand-lg">
-        <div class="logo">
-        GIGEO<sup>ART</sup></a>
-        </div>
-        <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-          </div>
-      </nav>
+  <nav class="navbar navbar-light bg-light navbar-expand-lg">
+    <div class="navbar__logo">
+      GIGEO<sup>ART</sup></a>
+    </div>
+    <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-      <header>
-      </header>
+  <header>
+  </header>
+
+  <section class="d-flex perfil">
+    <div class="perfil__container d-flex">
+      <img class="perfil__container__img" src="assets/img/profile-image.png" alt="">
+      <h4><b>Yuki Mukami</b> <p>30.000 seguidores</p></h4>
+      
+    </div>
+    <div class="perfil__botones pt-1 pr-3 d-none d-lg-block">
+      <button type="button" class="btn btn-primary disabled">Mensaje</button>
+      <button type="button" class="btn btn-danger disabled">Seguir</button>
+    </div>
+  </section>
  
-<section class="d-flex perfil">
-<div class="perfil__container">
-<img class="perfil__container__img" src="assets/img/profile-image.png" alt="">
-</div>
-<div class="perfil__seguidores">
-    <h4><b>Yuki Mukami</b></h4>
-    <p>30.000 seguidores</p>
-</div>
-</section>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <article class="photos">
+    <p class="photos__videos">Videos Populares</p>
+    <div class="row mt-4">
+      <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
+        <div class="card" style="width: 16rem;">
+          <img class="card-img" src="assets/img/image-1.png" alt="Card image cap">
+          <div class="card-body p-0">
+            <p class="card-text mb-0">Después de la vela - Yuki Mukami.</p>
+            <small class="text-left">16k vistas - 1 semana atrás</small>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
+        <div class="card" style="width: 16rem;">
+          <img class="card-img" src="assets/img/image-2.png" alt="Card image cap">
+          <div class="card-body p-0">
+            <p class="card-text mb-0">Far Away - Yuki Mukami</p>
+            <small class="text-left">100k vistas - 1 mes atrás</small>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
+        <div class="card" style="width: 16rem;">
+          <img class="card-img" src="assets/img/image-3.png" alt="Card image cap">
+          <div class="card-body p-0">
+            <p class="card-text mb-0">City - Yuki Mukami</p>
+            <small class="text-left">20k vistas - 1 mes atrás</small>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
+        <div class="card" style="width: 16rem;">
+          <img class="card-img" src="assets/img/image-4.png" alt="Card image cap">
+          <div class="card-body p-0">
+            <p class="card-text mb-0">A Yuki Tale - Yuki Mukami</p>
+            <small class="text-left">1m vistas - 1 año atrás</small>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
+        <div class="card" style="width: 16rem;">
+          <img class="card-img" src="assets/img/image-5.png" alt="Card image cap">
+          <div class="card-body p-0">
+            <p class="card-text mb-0">Mapocho - Yuki Mukami</p>
+            <small class="text-left">100k vistas - 1 mes atrás</small>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
+        <div class="card" style="width: 16rem;">
+          <img class="card-img" src="assets/img/image-6.png" alt="Card image cap">
+          <div class="card-body p-0">
+            <p class="card-text mb-0">30 days in My House</p>
+            <small class="text-left">10k vistas - 4 meses atrás</small>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
+        <div class="card" style="width: 16rem;">
+          <img class="card-img" src="assets/img/image-7.png" alt="Card image cap">
+          <div class="card-body p-0">
+            <p class="card-text mb-0">Santiago - Yuki Mukami</p>
+            <small class="text-left">40k vistas - 3 meses atrás</small>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
+        <div class="card" style="width: 16rem;">
+          <img class="card-img" src="assets/img/image-8.png" alt="Card image cap">
+          <div class="card-body p-0">
+            <p class="card-text mb-0">Después de la vela - Yuki Mukami.</p>
+            <small class="text-left">16k vistas - 1 semana atrás</small>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </article>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
