di formato al doc

--- a/index.html
+++ b/index.html
@@ -46,15 +46,17 @@
   <section class="d-flex perfil">
     <div class="perfil__container d-flex">
       <img class="perfil__container__img" src="assets/img/profile-image.png" alt="">
-      <h4><b>Yuki Mukami</b> <p>30.000 seguidores</p></h4>
-      
+      <h4><b>Yuki Mukami</b>
+        <p>30.000 seguidores</p>
+      </h4>
+
     </div>
     <div class="perfil__botones pt-1 pr-3 d-none d-lg-block">
       <button type="button" class="btn btn-primary disabled">Mensaje</button>
       <button type="button" class="btn btn-danger disabled">Seguir</button>
     </div>
   </section>
- 
+
 
   <article class="photos">
     <p class="photos__videos">Videos Populares</p>
