cambio tipografia añadiendo variables

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar bg-white navbar-expand-lg">
     <div class="navbar__logo">
-      GIGEO<sup>ART</sup></a>
+      GIGEO<span>ART</span>
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,7 @@
   <section class="d-flex perfil">
     <div class="perfil__container d-flex">
       <img class="perfil__container__img" src="assets/img/profile-image.png" alt="">
-      <h4><b>Yuki Mukami</b>
+      <h4>Yuki Mukami
         <p>30.000 seguidores</p>
       </h4>
 
@@ -60,7 +60,7 @@
 
   <article class="photos">
     <p class="photos__videos">Videos Populares</p>
-    <div class="row mt-4">
+    <div class="row mt-4 d-flex">
       <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
         <div class="card" style="width: 16rem;">
           <img class="card-img" src="assets/img/image-1.png" alt="Card image cap">
@@ -110,8 +110,8 @@
         <div class="card" style="width: 16rem;">
           <img class="card-img" src="assets/img/image-6.png" alt="Card image cap">
           <div class="card-body p-0">
-            <p class="card-text mb-0">30 days in My House</p>
-            <small class="text-left">10k vistas - 4 meses atrás</small>
+            <p class="card-text mb-0">Lucky Days - Yuki Mikami</p>
+            <small class="text-left">40k vistas - 3 meses atrás</small>
           </div>
         </div>
       </div>
@@ -119,8 +119,8 @@
         <div class="card" style="width: 16rem;">
           <img class="card-img" src="assets/img/image-7.png" alt="Card image cap">
           <div class="card-body p-0">
-            <p class="card-text mb-0">Santiago - Yuki Mukami</p>
-            <small class="text-left">40k vistas - 3 meses atrás</small>
+            <p class="card-text mb-0">30 days in My House</p>
+            <small class="text-left">10k vistas - 4 meses atrás</small>
           </div>
         </div>
       </div>
@@ -128,8 +128,8 @@
         <div class="card" style="width: 16rem;">
           <img class="card-img" src="assets/img/image-8.png" alt="Card image cap">
           <div class="card-body p-0">
-            <p class="card-text mb-0">Después de la vela - Yuki Mukami.</p>
-            <small class="text-left">16k vistas - 1 semana atrás</small>
+            <p class="card-text mb-0">Santiago - Yuki Mukami</p>
+            <small class="text-left">40k vistas - 3 mese atrás</small>
           </div>
         </div>
       </div>
