borre propiedades sin usar

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <img class="card-img" src="assets/img/image-8.png" alt="Card image cap">
           <div class="card-body p-0">
             <p class="card-text mb-0">Santiago - Yuki Mukami</p>
-            <small class="text-left">40k vistas - 3 mese atrás</small>
+            <small class="text-left">40k vistas - 3 meses atrás</small>
           </div>
         </div>
       </div>
