--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
       <h4>Yuki Mukami
         <p>30.000 seguidores</p>
       </h4>
-
     </div>
+
     <div class="perfil__botones pt-1 pr-3 d-none d-lg-block">
-      <button type="button" class="btn btn-primary disabled">Mensaje</button>
-      <button type="button" class="btn btn-danger disabled">Seguir</button>
+      <button type="button" class="btn btn-1">Mensaje</button>
+      <button type="button" class="btn btn-2">Seguir</button>
     </div>
   </section>
 
