añadi responsive para md y termine los bem

--- a/index.html
+++ b/index.html
@@ -61,75 +61,75 @@
 
   <article class="photos">
     <p class="photos__videos">Videos Populares</p>
-    <div class="row mt-4 d-flex">
-      <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
-        <div class="card" style="width: 16rem;">
-          <img class="card-img" src="assets/img/image-1.png" alt="Card image cap">
-          <div class="card-body p-0">
-            <p class="card-text mb-0">Después de la vela - Yuki Mukami.</p>
+    <div class="row mt-4 d-flex photos__row">
+      <div class="col-sm-12 col-md-4  col-lg-3 d-flex justify-content-center">
+        <div class="card photos__card" style="width: 16rem;">
+          <img class="card-img photos__img" src="assets/img/image-1.png" alt="Card image cap">
+          <div class="card-body photos__body p-0">
+            <p class="card-text photos__text mb-0">Después de la vela - Yuki Mukami.</p>
             <small class="text-left">16k vistas - 1 semana atrás</small>
           </div>
         </div>
       </div>
-      <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
-        <div class="card" style="width: 16rem;">
-          <img class="card-img" src="assets/img/image-2.png" alt="Card image cap">
-          <div class="card-body p-0">
-            <p class="card-text mb-0">Far Away - Yuki Mukami</p>
+      <div class="col-sm-12 col-md-4  col-lg-3 d-flex justify-content-center">
+        <div class="card photos__card" style="width: 16rem;">
+          <img class="card-img photos__img" src="assets/img/image-2.png" alt="Card image cap">
+          <div class="card-body photos__body p-0">
+            <p class="card-text photos__text mb-0">Far Away - Yuki Mukami</p>
             <small class="text-left">100k vistas - 1 mes atrás</small>
           </div>
         </div>
       </div>
-      <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
-        <div class="card" style="width: 16rem;">
-          <img class="card-img" src="assets/img/image-3.png" alt="Card image cap">
-          <div class="card-body p-0">
-            <p class="card-text mb-0">City - Yuki Mukami</p>
+      <div class="col-sm-12 col-md-4  col-lg-3 d-flex justify-content-center">
+        <div class="card photos__card" style="width: 16rem;">
+          <img class="card-img photos__img" src="assets/img/image-3.png" alt="Card image cap">
+          <div class="card-body photos__body p-0">
+            <p class="card-text photos__text mb-0">City - Yuki Mukami</p>
             <small class="text-left">20k vistas - 1 mes atrás</small>
           </div>
         </div>
       </div>
-      <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
-        <div class="card" style="width: 16rem;">
-          <img class="card-img" src="assets/img/image-4.png" alt="Card image cap">
-          <div class="card-body p-0">
-            <p class="card-text mb-0">A Yuki Tale - Yuki Mukami</p>
+      <div class="col-sm-12 col-md-4  col-lg-3 d-flex justify-content-center">
+        <div class="card photos__card" style="width: 16rem;">
+          <img class="card-img photos__img" src="assets/img/image-4.png" alt="Card image cap">
+          <div class="card-body photos__body p-0">
+            <p class="card-text photos__text mb-0">A Yuki Tale - Yuki Mukami</p>
             <small class="text-left">1m vistas - 1 año atrás</small>
           </div>
         </div>
       </div>
-      <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
-        <div class="card" style="width: 16rem;">
-          <img class="card-img" src="assets/img/image-5.png" alt="Card image cap">
-          <div class="card-body p-0">
-            <p class="card-text mb-0">Mapocho - Yuki Mukami</p>
+      <div class="col-sm-12 col-md-4  col-lg-3 d-flex justify-content-center">
+        <div class="card photos__card" style="width: 16rem;">
+          <img class="card-img photos__img" src="assets/img/image-5.png" alt="Card image cap">
+          <div class="card-body photos__body p-0">
+            <p class="card-text photos__text mb-0">Mapocho - Yuki Mukami</p>
             <small class="text-left">100k vistas - 1 mes atrás</small>
           </div>
         </div>
       </div>
-      <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
-        <div class="card" style="width: 16rem;">
-          <img class="card-img" src="assets/img/image-6.png" alt="Card image cap">
-          <div class="card-body p-0">
-            <p class="card-text mb-0">Lucky Days - Yuki Mikami</p>
+      <div class="col-sm-12 col-md-4 col-lg-3 d-flex justify-content-center">
+        <div class="card photos__card" style="width: 16rem;">
+          <img class="card-img photos__img" src="assets/img/image-6.png" alt="Card image cap">
+          <div class="card-body photos__body p-0">
+            <p class="card-text photos__text mb-0">Lucky Days - Yuki Mikami</p>
             <small class="text-left">40k vistas - 3 meses atrás</small>
           </div>
         </div>
       </div>
-      <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
-        <div class="card" style="width: 16rem;">
-          <img class="card-img" src="assets/img/image-7.png" alt="Card image cap">
-          <div class="card-body p-0">
-            <p class="card-text mb-0">30 days in My House</p>
+      <div class="col-sm-12 col-md-4 col-lg-3 d-flex justify-content-center">
+        <div class="card photos__card" style="width: 16rem;">
+          <img class="card-img photos__img" src="assets/img/image-7.png" alt="Card image cap">
+          <div class="card-body photos__body p-0">
+            <p class="card-text photos__text mb-0">30 days in My House</p>
             <small class="text-left">10k vistas - 4 meses atrás</small>
           </div>
         </div>
       </div>
-      <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
-        <div class="card" style="width: 16rem;">
-          <img class="card-img" src="assets/img/image-8.png" alt="Card image cap">
-          <div class="card-body p-0">
-            <p class="card-text mb-0">Santiago - Yuki Mukami</p>
+      <div class="col-sm-12 col-md-4  col-lg-3 d-flex justify-content-center">
+        <div class="card photos__card" style="width: 16rem;">
+          <img class="card-img photos__img" src="assets/img/image-8.png" alt="Card image cap">
+          <div class="card-body photos__body p-0">
+            <p class="card-text photos__text mb-0">Santiago - Yuki Mukami</p>
             <small class="text-left">40k vistas - 3 meses atrás</small>
           </div>
         </div>
